# oklang

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  x.py
oktest/regressions/: CMakeLists.txt
oktest/regressions/src/: main.cpp
src/: ast.hpp  call_frame.hpp  chunk.hpp  compiler.cpp  compiler.hpp  compilers.hpp  constants.hpp  copy.hpp  debug.cpp  debug.hpp  gc.cpp  gc.hpp  interned_string.cpp  interned_string.hpp  lexer.cpp  lexer.hpp  log.hpp  macros.hpp  main.cpp  object.cpp  object.hpp  object_store.cpp  object_store.hpp  operator.hpp  parser.cpp  parser.hpp  parsers.hpp  repl.cpp  repl.hpp  runner.cpp  runner.hpp  token.cpp  token.hpp  utf8.hpp  utility.hpp  value.cpp  value.hpp  value_operations.hpp  vm.cpp  vm.hpp  (+2 more)
tests/: helloworld.ok  strconcat.ok
tests/for/: syntax.ok
tests/functions/: arrow_function.ok  let_in_arrow_function.ok  let_in_arrow_method.ok
tests/regressions/: arithmetic.ok  class.ok  closure.ok  functioncall.ok
tests/regressions/modifiers/: let.ok
tests/var/: global_in_initializer.ok  global_redefination.ok  local_in_block.ok  local_in_initializer.ok  local_in_nested_block.ok  local_redefination.ok  local_same_as_parameter_block_function.ok  local_same_as_parameter_block_method.ok  no_initializer.ok  parameter_redefination.ok
tests/var/mods/fu/: async.ok  export.ok  glob.ok  immutable_mutation.ok  mut.ok  not_global_access.ok  static.ok
tests/var/mods/let/: async.ok  export.ok  glob.ok  immutable_mutation.ok  mut.ok  not_global_access.ok  static.ok
